# rianewsdashboard

./: .pre-commit-config.yaml  LICENSE
dashboard/: eslint.config.mjs  package-lock.json  package.json
dashboard/src/: app.module.ts
dashboard/src/news/: news.module.ts
dashboard/src/news/application/: index.ts
dashboard/src/news/application/services/: news.service.ts
dashboard/src/news/domain/models/: news.ts  page.ts  query.ts
dashboard/src/news/domain/repositories/: news.repository.ts
dashboard/src/news/infrastructure/: index.ts
dashboard/src/news/infrastructure/clients/: exporter.client.ts
dashboard/src/news/infrastructure/repositories/: news.repository.ts
exporter/: .gitignore  pyproject.toml  ria.ipynb
scraper/: pyproject.toml
