[project]
name = "ria-exporter"
version = "0.1.0"
description = "RIA news exporter as a test task"
authors = [
    {name = "andreyfesunov",email = "fsnv04@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
